--- a/src/EducationalPlans.Parser.UI/Web.config
+++ b/src/EducationalPlans.Parser.UI/Web.config
@@ -86,9 +86,7 @@
       <remove invariant="MySql.Data.MySqlClient"></remove>
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.8.3.0" />
       <remove invariant="System.Data.SqlClient" />
-      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient"
-           description=".Net Framework Data Provider for SqlServer"
-           type="System.Data.SqlClient.SqlClientFactory, System.Data" />
+      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient" description=".Net Framework Data Provider for SqlServer" type="System.Data.SqlClient.SqlClientFactory, System.Data" />
     </DbProviderFactories>
   </system.data>
   <system.codedom>
