Added parser logic for ui module.

--- a/src/Moodle3KL.Data/Moodle3KL.Data.csproj
+++ b/src/Moodle3KL.Data/Moodle3KL.Data.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Infrastructure\AppConfig.cs" />
     <Compile Include="Infrastructure\Moodle3KLDbContext.cs" />
     <Compile Include="Infrastructure\Moodle3KLDbFactory.cs" />
+    <Compile Include="Infrastructure\Moodle3KLUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\MdlEntityRepositoryBase.cs" />
   </ItemGroup>
