Added default infrastructure for student notifications.

--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmbeddedResourceUtil.cs" />
+    <Compile Include="Extensions\EmbeddedResources.cs" />
     <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Extensions\CollectionExtensions.cs" />
     <Compile Include="Extensions\ReflectionExtensions.cs" />
