--- a/src/StudentCard.Notifications/StudentCard.Notifications.csproj
+++ b/src/StudentCard.Notifications/StudentCard.Notifications.csproj
@@ -53,18 +53,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App\AppStart.cs" />
+    <Compile Include="Extensions\EmbeddedResources.cs" />
+    <Compile Include="Models\EmailModelBase.cs" />
+    <Compile Include="Models\StudentDebtEmailModel.cs" />
+    <Compile Include="Models\StudentEventEmailModel.cs" />
+    <Compile Include="Models\StudentPaymentEmailModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\EmailService.cs" />
     <Compile Include="Services\NotificationService.cs" />
+    <Compile Include="Services\StudentDebtEmailService.cs" />
+    <Compile Include="Services\StudentEventEmailService.cs" />
+    <Compile Include="Services\StudentPaymentEmailService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Templates\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Common.Data\Common.Data.csproj">
       <Project>{5b1d3893-720d-4bb9-8a10-7ab2edd2803e}</Project>
@@ -86,6 +92,11 @@
       <Project>{fd6889a0-1cce-4d47-9c34-e7cbc0e05e11}</Project>
       <Name>Moodle3KL.Domain</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Templates\StudentDebtEmailTemplate.html" />
+    <Content Include="Templates\StudentEventEmailTemplate.html" />
+    <Content Include="Templates\StudentPaymentEmailTemplate.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
