--- a/src/PersonnelSTU.Data/PersonnelSTU.Data.csproj
+++ b/src/PersonnelSTU.Data/PersonnelSTU.Data.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common.Data\Common.Data.csproj">
